--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -1,12 +1,13 @@
 \section{Conclusion}
 
-\textbf{Discussion}
+This paper proposes a 360 optical flow method using tangent images and global rotation warping.
+The tangent images use gnomonic projection uniform sampling from an initial cubemap to the final icosahedron-base tangent images to overcome the equirectangular projection distortions. Meanwhile use the global warping method to align large motions, 
+Finally, use the weight optical flow blending method to reduce discontinuities at face boundaries.
+%
+The result shows our method dramatic improve optical flow in 360 images and achieve state-of-the-art performance.
 
-The method potential has an advantage on high-resolution images optical flow estimation.
-
-
-\textbf{Limitation \& Future Work}
-
-To sccelerate the projection and stitch step, with multi-thread or c++.
-
-Pixel-based warping to deal with non-rigid or un-egomoiton.
+%%\textbf{Limitation \& Future Work}
+%To sccelerate the projection and stitch step, with multi-thread or c++.
+%Pixel-based warping to deal with non-rigid or un-egomoiton.
+To reduce the runtime we will use the c++ and multi-thread to replace the current python and single thread implementation.
+To improve our method performance on camera translation motion, we will replace the global warping method with the pixel-based warping method which will introduce both rotation and translation to global warping.
