--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -1,10 +1,10 @@
 \section{Conclusion}
 
-This paper proposes a 360 optical flow method using tangent images and global rotation warping.
+This paper proposes a 360° optical flow method using tangent images and global rotation warping.
 The tangent images use gnomonic projection uniform sampling from an initial cubemap to the final icosahedron-base tangent images to overcome the equirectangular projection distortions. Meanwhile use the global warping method to align large motions, 
 Finally, use the weight optical flow blending method to reduce discontinuities at face boundaries.
 %
-The result shows our method dramatic improve optical flow in 360 images and achieve state-of-the-art performance.
+The result shows our method dramatic improve optical flow in 360° images and achieve state-of-the-art performance.
 
 %%\textbf{Limitation \& Future Work}
 %To sccelerate the projection and stitch step, with multi-thread or c++.
