--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -13,24 +13,23 @@
 
 % Enter the paper's authors in order
 % \addauthor{Name}{email/homepage}{INSTITUTION_CODE}
-\addauthor{Susan Student}{http://www.vision.inst.ac.uk/~ss}{1}
-\addauthor{Petra Prof}{http://www.vision.inst.ac.uk/~pp}{1}
-\addauthor{Colin Collaborator}{colin@collaborators.com}{2}
+\addauthor{Mingze Yuan}{https://yuanmingze.github.io/}{1}
+\addauthor{Christian Richardt}{https://richardt.name}{1}
+%\addauthor{Colin Collaborator}{colin@collaborators.com}{2}
 
 % Enter the institutions
 % \addinstitution{Name\\Address}
 \addinstitution{
- The Vision Institute\\
- University of Borsetshire\\
- Wimbleham, UK
+ University of Bath\\
+ Bath, UK
 }
-\addinstitution{
- Collaborators, Inc.\\
- 123 Park Avenue,\\
- New York, USA
-}
+%\addinstitution{
+% Collaborators, Inc.\\
+% 123 Park Avenue,\\
+% New York, USA
+%}
 
-\runninghead{Student, Prof, Collaborator}{BMVC Author Guidelines}
+\runninghead{Yuan and Richardt}{360° Optical Flow using Tangent Images}
 
 % Any macro definitions you would like to include
 % These are not defined in the style file, because they don't begin
